fix bg on mobile

--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@
 	background: url(https://steamuserimages-a.akamaihd.net/ugc/1761446532953187247/B713E72A4007E29A1D2B53919716E2BA9BF237BD/)
 		no-repeat;
 	position: absolute;
-	height: 100vh;
+	height: 100%;
 	width: 100vw;
 	background-position: bottom;
 	background-position-x: center;
